# Fetchr

./: .gitignore  BETA_INSTALL_RU.md  Build.bat  BuildFast.bat  BuildInstaller.bat  README.md  Start.bat  fetchr-landing.html  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.node.json  vite.config.ts
deploy/: DEPLOY_VPS.md  nginx-fetchr.conf
docs/: TELEGRAM_BETA_BOT_SETUP_RU.md  VPS_API_RU.md
scripts/: bump-build-version.mjs  license-keygen.mjs  telegram-beta-bot.mjs  vps-api-server.mjs  write-latest-update-manifest.mjs
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_log.rs  binaries.rs  hls_proxy.rs  lib.rs  license.rs  main.rs  proxy.rs  remote.rs  telemetry.rs  updater.rs
src-tauri/src/chat_overlay/: cache.rs  composer.rs  kick_live.rs  layout.rs  mod.rs  model.rs  providers.rs  renderer.rs  settings.rs
src-tauri/src/commands/: download.rs  fonts.rs  fs_ops.rs  mod.rs  preview.rs  resolve.rs  system.rs  twitch.rs
src-tauri/src/jobs/: mod.rs  queue.rs  runner.rs  types.rs
src/app/: router.tsx
src/components/: active-preset-panel.tsx  app-layout.tsx  brand-logo.tsx  command-palette.tsx  download-row.tsx  graphite-panel.tsx  hls-player.tsx  kbd.tsx  license-gate.tsx  local-image.tsx  log-viewer.tsx  news-menu.tsx  preset-inline-action.tsx  resizable-preset-block.tsx  sidebar.tsx  source-thumbnail.tsx  status-badge.tsx  title-bar.tsx
src/config/: featureFlags.ts
test/: meta.json
(+176 files in other folders)
