[package]
name = "fetchr"
version = "0.2.4"
description = "Fetchr - modern HLS / VOD / live downloader"
authors = ["h3r0n"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "fetchr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
regex = "1"
once_cell = "1"
url = "2"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
ed25519-dalek = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
futures = "0.3"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
urlencoding = "2"
async-trait = "0.1"
ab_glyph = "0.2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
imageproc = "0.25"
fontdb = "0.16"
rayon = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
